--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ANYKERNEL_SOURCE=
-ANYKERNEL_SOURCE_BRANCH=
-KERNEL_SOURCE=
-KERNEL_SOURCE_BRANCH=
-KERNEL_CONFIG=
+ANYKERNEL_SOURCE= https://github.com/MxkulSharma/AnyKernel3
+ANYKERNEL_SOURCE_BRANCH= master
+KERNEL_SOURCE= https://github.com/MxkulSharma/kernel_nothing_sm7325
+KERNEL_SOURCE_BRANCH= fourteen
+KERNEL_CONFIG= vendor/lahaina-qgki_defconfig
 BUILD_ARGS:LLVM=1 LLVM_IAS=1
