--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE= https://github.com/MxkulSharma/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH= master
-KERNEL_SOURCE= https://github.com/MxkulSharma/kernal
-KERNEL_SOURCE_BRANCH= lineage-21
-KERNEL_CONFIG= vendor/lineage-m52xq_defconfig
+KERNEL_SOURCE= https://github.com/MxkulSharma/android_kernel_nothing_sm7325
+KERNEL_SOURCE_BRANCH= uvite
+KERNEL_CONFIG= phone1_defconfig
 BUILD_ARGS:LLVM=1 LLVM_IAS=1
